src/github.com/pluralism/clagocerqueira/client/app/static/theme/style.scss
/* ... */
.cube-portfolio {
    margin-top: 40px;
}



#grid-container, #grid-nature {
    .cbp-l-caption-title {
        font-size: 26px;
        margin-bottom: 20px;
    }

    .cbp-item {
        max-width: 350px;
        max-height: 350px;
    }
}


#grid-container, #grid-container2 {
    .cbp-item {
        max-width: 350px;
        max-height: 287px;
    }
}



.cbp-caption-fadeIn .cbp-l-caption-body {
    background-color: #5D2F30;
    opacity: 0.8;
    transition: opacity 1s cubic-bezier(0.19, 1, 0.22, 1) 0s;
    text-align: center;

    p {
        color: #FFFFFF;
	    font-size: 16px;
	    max-width: 80%;
        margin: 0 auto;
	    line-height: 2.0;
    }
}



.fullscreen-static-image {
    .flex-container-photo {
        display: flex;
        align-content: center;
        align-items: flex-end;
        justify-content: space-between;
        flex-wrap: wrap;
        flex-direction: row;



        > .start {
            display: flex;
            width: 100%;
            height: 20vh;
            align-items: flex-start;
            justify-content: flex-end;

            @media only screen and (max-width: 480px) {
                justify-content: center;
            }


            .intro-month-photo {
                margin-right: 15px;


                .month-photo-title {
                    margin-top: 40px;
                    text-align: center;
                    color: #FFFFFF;
                    font-weight: 400;
                    z-index: 1000;
                    cursor: pointer;
                }

                .month-photo {
                    padding: 5px;
                    z-index: 1000;


                    img {
                        transition: all .5s ease-in-out;
                        border-radius: 4px;
                    }


                    figcaption {
                        text-align: center;
                        margin-top: 5px;
                        color: #FFFFFF;
                        font-size: 14px;
                        font-weight: 400;
                        font-style: italic;
                    }


                    &:hover {
                        img {
                            // For screens smaller than 800px
                            @media only screen and (min-width: 800px) {
                                width: 600px;
                                height: 460px;
                            }
                        }
                    }
                }
            }
        }

        > .center {
            display: flex;
            flex: 0 0 100%;
            height: 50vh;
            justify-content: center;
            align-items: center;

            .title {
                width: 60%;
                @media only screen and (max-width: 800px) {
                    width: 80%;
                }
            }
        }
    }

    .flex-container {
        display: flex;
        justify-content: center;
        flex-wrap: nowrap;
        flex-direction: row;


        > .end {
            display: flex;
            justify-content: center;
            height: 20vh;

            .bounce-icon {
                margin-top: auto;
            }

            .down-arrow {
                cursor: pointer;
                font-size: 60px;
                width: 60px;
                height: 60px;
                border: 3px solid #FFF;
                border-radius: 50%;
                margin-bottom: 10px;
                display: inline-block;

                &:before {
                    position: relative;
                    color: #FFF;
                }
            }
        }
    }
}



#search_anything {
    display: inline-block;
    width: 100%;
    color: #FFF;
    font-size: 55px;
    font-style: normal;
    line-height: 1;
    font-weight: normal;
    border-radius: 0;
    box-shadow: none;
    background-color: rgba(255, 255, 255, 0.0);
    padding: 10px;
    border: none;
    border-bottom: solid 3px #C9C9C9;
    transition: border 0.3s;
    text-align: center;


    @media only screen and (max-width: 480px) {
        font-size: 25px;
    }


    &::-webkit-input-placeholder {
        color: #FFF;
    }

    &:focus, &:hover {
        outline: none;
        border-bottom: solid 3px #969696;
    }
}


@media(max-width: 768px) {
    .cover-section .promo-info__title {
        margin-bottom: 80px;
    }
}


@media(max-width: 680px) {
    .cover-section .promo-info__title {
        font-size: 60px;
    }
}
/* ... */

